<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/activity_main_button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="onClickButtonUpdate"
        android:text="@string/activity_main_button_update"
        android:textSize="@dimen/activity_main_button_textsize" />

    <Button
        android:id="@+id/activity_main_button_classrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="onClickButtonClassrooms"
        android:text="@string/activity_main_button_classrooms"
        android:textSize="@dimen/activity_main_button_textsize" />

    <Button
        android:id="@+id/activity_main_button_change_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="onClickButtonChangeStatus"
        android:text="@string/activity_main_button_change_status"
        android:textSize="@dimen/activity_main_button_textsize" />

    <Button
        android:id="@+id/activity_main_button_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="onClickButtonAuth"
        android:text="@string/activity_main_button_authorization"
        android:textSize="@dimen/activity_main_button_textsize" />

</android.support.v7.widget.LinearLayoutCompat>