<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClassroomsActivity">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/activity_classrooms_spinner_campus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/activity_classrooms_spinner_lesson_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.AppCompatSpinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_classrooms_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_classrooms_button_search" />

        <RadioGroup
            android:id="@+id/activity_classrooms_radiogroup_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_classrooms_radiobutton_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/activity_classrooms_radiobutton_free" />

            <RadioButton
                android:id="@+id/activity_classrooms_radiobutton_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_classrooms_radiobutton_busy" />
        </RadioGroup>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_classrooms_recyclerview_classrooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>

</android.support.v7.widget.LinearLayoutCompat>